--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       </a>
     </div>
   </div>
+  <center><h3>contador de Visitantes</h3><div align=center><a href='https://contador.s12.com.br'><img src='https://contador.s12.com.br/img-9C8ZZD9Ad9c8BZy2-26.gif' border='0' alt='contador de visitantes'></a><script type='text/javascript' src='https://contador.s12.com.br/ad.js?id=9C8ZZD9Ad9c8BZy2'></script></div>
   <script src="script.js"></script>
 </body>
 
